chore: add missing templates referenced in CONTRIBUTING.adoc

--- a/CONTRIBUTING.adoc
+++ b/CONTRIBUTING.adoc
@@ -1,40 +1,36 @@
 :toc:
 
-pass:[<!-- vale RedHat.Headings = NO -->]
-
 = Contributing to the Eclipse Che documentation
 
 == Understanding the Che documentation ecosystem
-
-pass:[<!-- vale RedHat.Headings = NO -->]
 
 * See the xref:CODE_OF_CONDUCT.adoc[Code of conduct].
 
 * Use the following editorial resources:
 
-** Minimalism in writing. 
+** Minimalism in writing.
 *** link:https://docs.google.com/presentation/d/1Yeql9FrRBgKU-QlRU-nblPJ9pfZKgoKcU8SW6SQ_UqI/edit#slide=id.g1f4790d380_2_257[The Wisdom of Crowds slides]
 *** link:https://youtu.be/s3Em8QSXyn8[The Wisdom of Crowds video]
 *** link:https://www.nngroup.com/articles/chunking/[Chunking].
 
 ** Style Guide
 
-*** link:https://redhat-documentation.github.io/supplementary-style-guide/[Red Hat Style Guide] 
+*** link:https://redhat-documentation.github.io/supplementary-style-guide/[Red Hat Style Guide]
 
 *** https://redhat-documentation.github.io/vale-at-red-hat/[Vale for writers at Red Hat]
-
-pass:[<!-- vale RedHat.As = NO -->]
 
 ** Guidelines from the
 link:https://redhat-documentation.github.io/modular-docs/[Modular Documentation Initiative].
 +
-TIP: For Antora, a https://docs.antora.org/antora/latest/module-directories/[_module_] is a collection of content in a component version. This project is referring to Modular Documentation modules as _content type_. To understand the nature of topics, see the link:https://redhat-documentation.github.io/modular-docs/#modular-docs-terms-definitions[Appendix A: Modular Documentation Terms and Definitions].
+TIP: For Antora, a https://docs.antora.org/antora/latest/module-directories/[_module_] is a collection of content in a component version.
+This project is referring to Modular Documentation modules as _content types_.
+To understand the nature of topics, see the link:https://redhat-documentation.github.io/modular-docs/#modular-docs-terms-definitions[Appendix A: Modular Documentation Terms and Definitions].
 
 pass:[<!-- vale RedHat.As = YES -->]
 
 * Use the link:https://www.atlassian.com/git/tutorials/comparing-workflows/forking-workflow[Git Forking Workflow].
 
-* link:https://www.eclipse.org/che/docs/che-7/hosted-che/[Eclipse Che hosted by Red Hat] is the recommended IDE to edit and builds the content.
+* link:https://www.eclipse.org/che/docs/che-7/hosted-che/[Eclipse Che hosted by Red Hat] is the recommended IDE to edit and build the content.
 
 * The relevant tools for editing, validation, and publication workflows are available in the link:https://quay.io/repository/eclipse/che-docs[`che-docs` container].
 
@@ -48,29 +44,27 @@ pass:[<!-- vale RedHat.As = YES -->]
 
 ** link:https://www.shellcheck.net/[ShellCheck] validates the shell scripts.
 
-
 [id="documentation-workflow"]
 == The documentation workflow
 
 .Procedure
-
 pass:[<!-- vale RedHat.write = NO -->]
 
 . Contributor submits a code pull request in one of the Che repositories with a `status/doc-impact` label.
 
-. The author of the code pull request or the reviewer ensures the code pull request contains a reference to a documentation pull request for the `main` branch of the `che-docs` repository:
+. The author of the code pull request, or the reviewer ensures the code pull request contains a reference to a documentation pull request for the `main` branch of the `che-docs` repository:
 
-.. The author of the code pull request or the reviewer provides a documentation pull request that the members of the documentation team can merge without further editing.
+.. The author of the code pull request, or the reviewer provides a documentation pull request that the members of the documentation team can merge without further editing.
 
-.. Or, the author of the code pull request or the reviewer provides at least an initial draft of the content and reaches out to the documentation-team members for assistance with editing, to help finalizing the documentation pull request.
+.. Or, the author of the code pull request, or the reviewer provides at least an initial draft of the content and reaches out to the documentation-team members for assistance with editing, to help finalize the documentation pull request.
 
-.. Or, the author of the code pull request or the reviewer reaches out to the members of the documentation team and work with them on submitting a documentation pull request.
+.. Or, the author of the code pull request, or the reviewer reaches out to the members of the documentation team and work with them on submitting a documentation pull request.
 
 . xref:reviewing-a-documentation-pull-request[Review the documentation pull request].
 
 . Merge the code pull request into the `che` repository, for next milestone `x.y.z`.
 
-. Merge the documentation content for next milestone `x.y.z` into the `main` branch of the `che-docs` repository. 
+. Merge the documentation content for next milestone `x.y.z` into the `main` branch of the `che-docs` repository.
 
 . Release `che` milestone `x.y.z`.
 
@@ -86,36 +80,36 @@ pass:[<!-- vale RedHat.write = YES -->]
 Review the pull request in the Eclipse Che hosted by Red Hat IDE.
 
 .Procedure
-
-. Navigate to the pull request 
+. Navigate to the pull request
 
 . Click on the _Eclipse Che hosted by Red Hat_ link in the comments.
 
-. Build and validate the documentation, and start the preview server: open _My Workspace > User Runtimes > che-docs > Start preview server_.
+. Build and validate the documentation, and start the preview server: open _Menu > Terminal > Run Tasks > che: start-preview-server_.
 
-. Watch the output of the _Start preview server_ task to validate the build: internal and external links, language on created and changed files.
+. In the _Terminal_ panel, watch the output of the _che: start-preview-server_ task to validate the result: internal and external links, language on created and changed files.
 
 . Navigate to the preview: open _Preview_.
 
-. Open created and changed files, and examine the _Problems Panel_ to validate the language. Toggle the view of the _Problems Panel_ using the _View > Problems_ menu entry.
+. Open created and changed files, and examine the _Problems Panel_ to validate the language.
+Toggle the view of the _Problems Panel_ using the _View > Problems_ menu entry.
 
-. Review the pull request. See the xref:code_review_checklist.adoc[code review checklist].
+. Review the pull request.
+See the xref:code_review_checklist.adoc[code review checklist].
 
 [id="editing-submitting-and-reviewing-content"]
 == Editing, submitting and reviewing content
 
 .Prerequisites
-
-* A fork of the link:https://github.com/eclipse/che-docs/[] project, accessible at the following URL, where `__<organization>__` is your GitHub organization or username: `++https++://github.com/__<organization__/che-docs/`. See link:https://help.github.com/en/github/getting-started-with-github/fork-a-repo[Fork a repository].
+* A fork of the link:https://github.com/eclipse/che-docs/[] project, accessible at the following URL, where `__<organization>__` is your GitHub organization or username: `++https++://github.com/__<organization>__/che-docs/`.
+See link:https://help.github.com/en/github/getting-started-with-github/fork-a-repo[Fork a repository].
 
 .Procedure
-
-. Open a che-docs workspace running on Eclipse Che hosted by Red Hat: `++https++://workspaces.openshift.com/f?url=https://github.com/__<organization>__/che-docs/`. 
+. Open a che-docs workspace running on Eclipse Che hosted by Red Hat: `++https++://workspaces.openshift.com/#https://github.com/__<organization>__/che-docs/`.
 
 . Create a branch `__<branch-name>__` for your work.
 
 . Edit the content.
-+ 
++
 * xref:creating-a-page[]
 * xref:creating-a-partial[]
 * xref:creating-a-partial[]
@@ -125,31 +119,61 @@ Review the pull request in the Eclipse Che hosted by Red Hat IDE.
 
 . Build and validate the documentation, and start the preview server: open _My Workspace > User Runtimes > che-docs > Start preview server_.
 
-. Watch the output of the _Start preview server_ task to validate the build: internal and external links, language on created and changed files.
+. Watch the output of the _Start preview server_ task to validate the result: internal and external links, language on created and changed files.
 
 . Navigate to the preview: open _Preview_.
 
-. Open created and changed files, and examine the _Problems Panel_ to validate the language. Toggle the view of the _Problems Panel_ using the _View > Problems_ menu entry.
+. Open created and changed files, and examine the _Problems Panel_ to validate the language.
+Toggle the view of the _Problems Panel_ using the _View > Problems_ menu entry.
 
 . To merge the content, open a pull request to the default `+main+` branch.
 
 . When you intend to review a pull request, assign yourself in the GitHub pull request view.
 
-. Review the pull request. See xref:reviewing-a-documentation-pull-request[Reviewing a documentation pull request].
+. Review the pull request.
+See xref:reviewing-a-documentation-pull-request[Reviewing a documentation pull request].
 
 . The documentation pull request needs a review by the documentation team and by engineering.
 
-. The continuous integration process is publishing content after merge in the release branch.
+. The continuous integration process is publishing content after the merge in the release branch.
 
 .Verification steps
-
 * Navigate to the publication URL of Eclipse Che Documentation: link:https://www.eclipse.org/che/docs/[] and search for your changes.
-
 
 [id="creating-a-page"]
 == Creating a page
 
-Create a link:https://docs.antora.org/antora/2.3/page/[page] and add it to the navigation when it is meaningful to have a navigation entry, or when it may receive link:https://docs.antora.org/antora/2.3/page/page-id/[cross references]. Avoid cross references to a page link:https://docs.antora.org/antora/2.3/page/page-id/#id-fragment[fragment]. The file name determines the page URL. Therefore an AsciiDoc attribute defines the content type, rather than a file name prefix. 
+Create a link:https://docs.antora.org/antora/latest/page/[page] and add it to the navigation when:
+
+* It is meaningful to have a navigation entry
+* The content may receive link:https://docs.antora.org/antora/2.3/page/page-id/[cross-references].
+Avoid cross-references to a page link:https://docs.antora.org/antora/2.3/page/page-id/#id-fragment[fragment].
+
+.Procedure
+. Define the page destination directory __<pages_directory>__.
+It can be:
++
+* `modules/administration-guide/pages/`
+* `modules/end-user-guide/pages/`
+
+. Define the page title, and the page file name: use lower case and separate words with dashes `__<title>__.adoc`.
+The directory and the file name determine the page URL.
+
+. Copy one of the templates in the `templates/pages` directory to `__<pages_directory>__/__<title>__.adoc`.
++
+* link:https://github.com/eclipse/che-docs/blob/main/templates/pages/assembly.adoc[Assembly page template]
+* link:https://github.com/eclipse/che-docs/blob/main/templates/pages/concept.adoc[Concept page template]
+* link:https://github.com/eclipse/che-docs/blob/main/templates/pages/procedure.adoc[Procedure page template]
+* link:https://github.com/eclipse/che-docs/blob/main/templates/pages/reference.adoc[Reference page template]
+
+. Add a cross-reference to the page in the `modules/__<guide_name>__/nav.adoc` navigation file to create the link:https://docs.antora.org/antora/2.3/navigation/xrefs-and-link-text/#default-link-text[navigation entry].
++
+[source,asciidoc,subs="+quotes"]
+----
+* xref:__<file_name>__.adoc[]
+----
+
+. Verify that an AsciiDoc attribute defines the content type.
 The page content type can be:
 
 * link:https://redhat-documentation.github.io/modular-docs/#forming-assemblies[:_content-type: ASSEMBLY]
@@ -157,26 +181,8 @@ The page content type can be:
 * link:https://redhat-documentation.github.io/modular-docs/#creating-procedure-modules[:_content-type: PROCEDURE]
 * link:https://redhat-documentation.github.io/modular-docs/#creating-reference-modules[:_content-type: REFERENCE]
 
-.Procedure
 
-. Copy one of the templates in the `templates/pages` directory to `modules/__<guide_name>__/pages/__<lowercase_title>__.adoc`.
-+
-* link:https://github.com/eclipse/che-docs/blob/main/templates/pages/assembly.adoc[Assembly page template]
-* link:https://github.com/eclipse/che-docs/blob/main/templates/pages/concept.adoc[Concept page template]
-* https://github.com/eclipse/che-docs/blob/main/templates/pages/procedure.adoc[Procedure page template]
-* https://github.com/eclipse/che-docs/blob/main/templates/pages/reference.adoc[Reference page template]
-
-. Add a cross reference to the page in the `modules/__<guide_name>__/nav.adoc` navigation file to create the link:https://docs.antora.org/antora/2.3/navigation/xrefs-and-link-text/#default-link-text[navigation entry].
-+
-.Navigation entry
-====
-[subs="+attributes,quotes"]
-----
-* xref:__<file_name>__.adoc[]
-----
-====
-
-. Edit the metadata in the file.
+. Edit the Antora metadata in the file.
 +
 .Template metadata for a page
 ====
@@ -185,73 +191,77 @@ The page content type can be:
 :description: A description of the page stored in an HTML meta tag.
 :keywords: comma-separated values, stored, in an HTML, meta, tag
 :navtitle: Title
-// :page-aliases:
+:page-aliases:
 
-[id="title_{context}"]
+[id="title"]
 = Title
 ----
 ====
 
 . Author the content.
 
-
 [id="creating-a-partial"]
 == Creating a partial
 
-Create a link:https://docs.antora.org/antora/2.3/page/partials-and-content-snippets/[partial] and add it to an assembly page when it may not receive cross references. For consistency with the pages, an AsciiDoc attribute defines the content type.
-The partial content type can be:
+Create a link:https://docs.antora.org/antora/2.3/page/partials-and-content-snippets/[partial] and add it to an assembly page when:
 
-* link:https://redhat-documentation.github.io/modular-docs/#creating-concept-modules[:_content-type: CONCEPT]
-* link:https://redhat-documentation.github.io/modular-docs/#creating-procedure-modules[:_content-type: PROCEDURE]
-* link:https://redhat-documentation.github.io/modular-docs/#creating-reference-modules[:_content-type: REFERENCE]
+* The content is a concept, procedure or reference to include in a page.
+* The content may not receive cross-references.
 
 .Procedure
-
 . Copy one of the templates in the `templates/partials` directory to `modules/__<guide_name>__/partials/__<lowercase_title>__.adoc`.
 +
 * link:https://github.com/eclipse/che-docs/blob/main/templates/partials/concept.adoc[Concept partial template]
 * https://github.com/eclipse/che-docs/blob/main/templates/partials/procedure.adoc[Procedure partial template]
 * https://github.com/eclipse/che-docs/blob/main/templates/partials/reference.adoc[Reference partial template]
 
-. Add an include statement in the corresponding page `modules/__<guide_name>__/pages/__<title>__.adoc`:
+. Verify that an AsciiDoc attribute defines the content type.
+The partial content type can be:
+
+* link:https://redhat-documentation.github.io/modular-docs/#creating-concept-modules[:_content-type: CONCEPT]
+* link:https://redhat-documentation.github.io/modular-docs/#creating-procedure-modules[:_content-type: PROCEDURE]
+* link:https://redhat-documentation.github.io/modular-docs/#creating-reference-modules[:_content-type: REFERENCE]
+
+. Add an include statement in the corresponding page in `modules/__<guide_name>__/pages/`:
 +
-.Include statement to a partial, in a page
-====
-`pass:a,c,m[include::partial$__<file_name>__.adoc[leveloffset=+1]]`
-====
+[source,asciidoc,subs="+quotes"]
+----
+\include::partial$__<file_name>__.adoc[leveloffset=+1]
+----
 
 . Edit the metadata in the file.
 +
-.Template metadata for a partial
-====
-[subs="+attributes,quotes"]
+[source,asciidoc,subs="+attributes,quotes"]
 ----
-[id="title_{context}"]
+[id="title"]
 = Title
 ----
-====
 
 . Author the content.
 
-
 [id="adding-a-contextual-example"]
-== Adding a contextual example
+== Adding an example specific to the project context
 
-Create a contextual link:https://docs.antora.org/antora/2.3/page/examples-and-source-snippets/[example] when upstream and downstream need a different content. The include statement contains the `project-context` attribute to ensure upstream and downstream use a different file.
+Create an link:https://docs.antora.org/antora/2.3/page/examples-and-source-snippets/[example] specific to the project context when:
+
+* Upstream and downstream require a different content.
+* The content is a block of text.
+* Using an AsciiDoc attribute is not an option.
+
+The include statement contains the `project-context` attribute to ensure upstream and downstream use a different file.
 These link:https://redhat-documentation.github.io/modular-docs/#using-text-snippets[snippets] have no content type.
 
 .Procedure
-
-. Create an empty file `modules/__<guide_name>__/examples/snip_che___<lowercase_title>__.adoc`.
+. Create the file `modules/__<guide_name>__/examples/snip_che___<lowercase_title>__.adoc`, and author the content.
 
 . Add an include statement in the corresponding page `templates` directory to `modules/__<guide_name>__/pages/__<title>__.adoc`.
 +
-====
-`pass:a,c,m[include::example$snip_{project-context_}__<file_name>__.adoc[leveloffset=+1]]`
-====
+[source,asciidoc,subs="+quotes"]
+----
+\include::example$snip_{project-context}__<file_name>__.adoc[leveloffset=+1]
+----
 
 . Author the content.
-
 
 [id="adding-an-image"]
 == Adding an image
@@ -259,10 +269,10 @@ These link:https://redhat-documentation.github.io/modular-docs/#using-text-snipp
 Avoid using images unless necessary.
 
 .Procedure
-
 . Add the image to the `+modules/__<guide_name>__/images/+` directory corresponding to the guide including the image.
 
-. To publish a block image, use the following syntax. See link:https://docs.antora.org/antora/2.3/page/block-images/[Antora documentation - Add block images] and link:https://docs.asciidoctor.org/asciidoc/latest/macros/images/[Asciidoctor documantation - Images].
+. To publish a block image, use the following syntax.
+See link:https://docs.antora.org/antora/2.3/page/block-images/[Antora documentation - Add block images] and link:https://docs.asciidoctor.org/asciidoc/latest/macros/images/[Asciidoctor documentation - Images].
 +
 .Block image
 ====
@@ -272,9 +282,10 @@ image::__<image_name>__.png[__<Image title>__]
 ----
 ====
 
-. The publication tool resizes images. To provide a link to a full-size image, add a `link` attribute:
+. The publication tool resizes images.
+To provide a link to a full-size image, add a `link` attribute:
 +
-.Block image with a link to the full size image
+.Block image with a link to the full-size image
 ====
 ----
 .__<Image caption>__
@@ -286,14 +297,14 @@ image::__<image_file_name>__[__<Image title>__,link="../_images/__<image_file_na
 == Using special characters
 
 .Procedure
-
-* To exclude special characters from markup  substitutions, use the link:https://docs.asciidoctor.org/asciidoc/latest/pass/pass-macro/#custom-substitutions[inline `pass` macro]. 
+* To exclude special characters from markup substitutions, use the link:https://docs.asciidoctor.org/asciidoc/latest/pass/pass-macro/#custom-substitutions[inline `pass` macro].
 +
 .Displaying a variable name containing underscores
 ====
 ----
 pass:a,c,m[VARIABLE_NAME__WITH__UNDERSCORES]
 ----
+
 Result::
 pass:a,c,m[VARIABLE_NAME__WITH__UNDERSCORES]
 ====
@@ -302,14 +313,13 @@ pass:a,c,m[VARIABLE_NAME__WITH__UNDERSCORES]
 
 This section describes how to build and validate the documentation on a local environment using the `che-docs` container.
 
-WARNING: This is not the preferred method. For the supported method, see: xref:editing-submitting-and-reviewing-content[].
+WARNING: This is not the preferred method.
+For the supported method, see: xref:editing-submitting-and-reviewing-content[].
 
 .Prerequisites:
-
 * A running installation of link:http://podman.io[podman] or link:http://docker.io[docker].
 
 .Procedure
-
 . Open a shell prompt into the project directory, and build and validate the documentation using and instance of the `che-docs` container.
 +
 ----
@@ -323,11 +333,9 @@ $ ./tools/runnerpreview.sh
 == Getting support
 
 .GitHub issue
-
 * https://github.com/eclipse/che/issues/new?labels=area/doc,kind/question[image:https://img.shields.io/badge/New-question-blue.svg?style=flat-curved[Ask a question]]
 
 * https://github.com/eclipse/che/issues/new?labels=area/doc,kind/bug[image:https://img.shields.io/badge/New-bug-red.svg?style=flat-curved[Open a bug]]
 
 .Public Chat
- 
 * Join the public https://mattermost.eclipse.org/eclipse/channels/eclipse-che[eclipse-che Mattermost channel] to talk to the community and contributors.
