--- a/modules/administration-guide/pages/installing-che-on-openshift-using-cli.adoc
+++ b/modules/administration-guide/pages/installing-che-on-openshift-using-cli.adoc
@@ -15,21 +15,17 @@ You can install {prod-short} on OpenShift.
 
 * `{prod-cli}`. See: xref:installing-the-chectl-management-tool.adoc[].
 
-[IMPORTANT]
-====
-Ensure that there are no `CheCluster` API by running the following command:
-[source,subs="+quotes,attributes"]
-----
-$ {orch-cli} get crd checlusters.org.eclipse.che
-Error from server (NotFound): customresourcedefinitions.apiextensions.k8s.io "checlusters.org.eclipse.che" not found
-----
-====
-
 
 .Procedure
 
+. Ensure that there is no previous {prod-short} instance, if you already used the OpenShift cluster to deploy {prod-short}:
++
+[subs="+attributes,+quotes"]
+----
+$ {prod-cli} server:delete
+----
 
-* Create the {prod-short} instance:
+. Create the {prod-short} instance:
 +
 [subs="+attributes,+quotes"]
 ----
