fix: Add step to ensure, that there is no Che instances before deploy… (#2453)

--- a/modules/administration-guide/pages/installing-che-on-openshift-using-cli.adoc
+++ b/modules/administration-guide/pages/installing-che-on-openshift-using-cli.adoc
@@ -17,8 +17,14 @@ You can install {prod-short} on OpenShift.
 
 .Procedure
 
+. Ensure that there is no previous {prod-short} instance, if you already used the OpenShift cluster to deploy {prod-short}:
++
+[subs="+attributes,+quotes"]
+----
+$ {prod-cli} server:delete
+----
 
-* Create the {prod-short} instance:
+. Create the {prod-short} instance:
 +
 [subs="+attributes,+quotes"]
 ----
