--- a/modules/administration-guide/pages/installing-che-on-openshift-using-the-web-console.adoc
+++ b/modules/administration-guide/pages/installing-che-on-openshift-using-the-web-console.adoc
@@ -15,6 +15,13 @@ This section describes how to install {prod-short} using the OpenShift web conso
 
 .Procedure
 
+. Ensure that there is no previous {prod-short} instance, if you already used the OpenShift cluster to deploy {prod-short}:
++
+[subs="+attributes,+quotes"]
+----
+$ {prod-cli} server:delete
+----
+
 . Install the {prod} Operator. See link:https://docs.openshift.com/container-platform/{ocp4-ver}/operators/admin/olm-adding-operators-to-cluster.html#olm-installing-from-operatorhub-using-web-console_olm-adding-operators-to-a-cluster[Installing from OperatorHub using the web console].
 
 . Create the `{prod-namespace}` project in OpenShift as follows:
