--- a/modules/administration-guide/pages/installing-che-on-openshift-using-the-web-console.adoc
+++ b/modules/administration-guide/pages/installing-che-on-openshift-using-the-web-console.adoc
@@ -17,7 +17,7 @@ This section describes how to install {prod-short} using the OpenShift web conso
 
 .Procedure
 
-. Ensure that there is no previous {prod-short} instance, if you already used the OpenShift cluster to deploy {prod-short}:
+. Optional: If you previously deployed {prod-short} on this OpenShift cluster, ensure that the previous {prod-short} instance is removed:
 +
 [subs="+attributes,+quotes"]
 ----
