--- a/modules/end-user-guide/pages/mounting-configmaps.adoc
+++ b/modules/end-user-guide/pages/mounting-configmaps.adoc
@@ -16,11 +16,11 @@ Mount {kubernetes} ConfigMaps to the `{devworkspace}` containers in the {orch-na
 
 * An active `{orch-cli}` session with administrative permissions to the destination {orch-name} cluster. See {orch-cli-link}.
 
-* You have created a new ConfigMap or determined an existing one in your user {orch-namespace} to mount to all `{devworkspace}` containers.
+* In your user {orch-namespace}, you created a new ConfigMap or determined an existing ConfigMap to mount to all `{devworkspace}` containers.
 
 .Procedure
 
-. Add the required labels to the ConfigMap.
+. Add the labels, which are required for mounting the ConfigMap, to the ConfigMap.
 +
 [subs="+quotes,+attributes,+macros"]
 ----
