--- a/modules/end-user-guide/pages/mounting-secrets.adoc
+++ b/modules/end-user-guide/pages/mounting-secrets.adoc
@@ -16,11 +16,11 @@ Mount {kubernetes} Secrets to the `{devworkspace}` containers in the {orch-name}
 
 * An active `{orch-cli}` session with administrative permissions to the destination {orch-name} cluster. See {orch-cli-link}.
 
-* You have created a new Secret or determined an existing one in your user {orch-namespace} to mount to all `{devworkspace}` containers.
+* In your user {orch-namespace}, you created a new Secret or determined an existing Secret to mount to all `{devworkspace}` containers.
 
 .Procedure
 
-. Add the required labels to the Secret.
+. Add the labels, which are required for mounting the Secret, to the Secret.
 +
 [subs="+quotes,+attributes,+macros"]
 ----
