--- a/modules/end-user-guide/pages/url-parameter-for-starting-ephemeral-workspaces.adoc
+++ b/modules/end-user-guide/pages/url-parameter-for-starting-ephemeral-workspaces.adoc
@@ -9,7 +9,7 @@
 
 If the URL for starting a new workspace doesn't contain a URL parameter specifying the storage type, {prod-short} will not persist by default the workspace and its data and they'll be lost when the workspace stops.
 
-The URL parameter for specifying a supported storage Type is `storageType=__<storage_type>__`:
+The URL parameter for specifying a supported storage type is `storageType=__<storage_type>__`:
 
 [source,subs="+quotes,+attributes,+macros"]
 ----
