chore: Backport migration and rollback scripts
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/modules/administration-guide/examples/proc_che-rolling-the-upgrade-back-from-che-7-49-to-che-7-41-on-openshift.adoc
+++ b/modules/administration-guide/examples/proc_che-rolling-the-upgrade-back-from-che-7-49-to-che-7-41-on-openshift.adoc
@@ -3,7 +3,7 @@
 :parent-context-of-rolling-the-upgrade-back-to-che-7.41-on-red-hat-openshift: {context}
 
 [id="rolling-the-upgrade-back-to-che-7.41-on-red-hat-openshift_{context}"]
-= Rolling the upgrade back to 7.41 on Red Hat OpenShift
+= Rolling the upgrade back to Che 7.41 on Red Hat OpenShift
 
 If upgrading {prod-short} 7.41 to 7.49 on Red Hat OpenShift fails, you can run a rollback script to restore {prod-short} 7.41.
 
