chore: Single-sourcing external content by using Antora Collector extension rather than gulp (and build.sh). chore: Validating content by using local Antora extensions rather than gulp (and build.sh). chore: Consistent output fix: fix build errors and warnings See: https://gitlab.com/antora/antora-collector-extension

--- a/modules/administration-guide/pages/architecture-overview.adoc
+++ b/modules/administration-guide/pages/architecture-overview.adoc
@@ -8,7 +8,7 @@
 = {prod-short} architecture
 
 .High-level {prod-short} architecture with the {devworkspace} operator
-image::architecture/che-interacting-with-devworkspace.png[]
+image::architecture/{project-context}-interacting-with-devworkspace.png[]
 
 {prod-short} runs on three groups of components:
 
