--- a/modules/administration-guide/pages/checluster-custom-resource-fields-reference.adoc
+++ b/modules/administration-guide/pages/checluster-custom-resource-fields-reference.adoc
@@ -47,4 +47,4 @@ spec:
 ----
 ====
 
-include::example$checluster-properties.adoc[leveloffset=+1]
+include::example$checluster-properties/checluster-properties.adoc[leveloffset=+1]
