--- a/modules/administration-guide/pages/user-workspaces.adoc
+++ b/modules/administration-guide/pages/user-workspaces.adoc
@@ -29,7 +29,7 @@ A workspace is one {orch-name} Deployment containing the workspace containers an
 * Endpoints
 * Ingresses or Routes
 * Secrets
-* Persistent Volumes (PVs)
+* Persistent Volumes (PV)
 
 A {prod-short} workspace contains the source code of the projects, persisted in a {platforms-name} Persistent Volume (PV). Microservices have read-write access to this shared directory.
 
@@ -38,6 +38,6 @@ Use the devfile v2 format to specify the tools and runtime applications of a {pr
 The following diagram shows one running {prod-short} workspace and its components.
 
 .{prod-short} workspace components
-image::architecture/workspace-components-with-dw.png[]
+image::workspace-components-with-dw.png[]
 
 In the diagram, there is one running workspaces.
