--- a/modules/administration-guide/partials/ref_che-server-component-system-properties-reference.adoc
+++ b/modules/administration-guide/partials/ref_che-server-component-system-properties-reference.adoc
@@ -3,5 +3,5 @@
 
 The following document describes all possible configuration properties of the {prod-short} server component.
 
-include::example$system-variables.adoc[leveloffset=+1]
+include::example$che-server-properties/system-variables.adoc[leveloffset=+1]
 
