--- a/modules/administration-guide/pages/deploying-che-with-support-for-git-repositories-with-self-signed-certificates.adoc
+++ b/modules/administration-guide/pages/deploying-che-with-support-for-git-repositories-with-self-signed-certificates.adoc
@@ -9,6 +9,8 @@
 
 You can configure {prod-short} to support operations on Git providers that use self-signed certificates.
 
+See also: xref:importing-untrusted-tls-certificates.adoc[].
+
 .Prerequisites
 
 * An active `oc` session with administrative permissions to the OpenShift cluster. See link:https://docs.openshift.com/container-platform/{ocp4-ver}/cli_reference/openshift_cli/getting-started-cli.html[Getting started with the OpenShift CLI].
@@ -54,13 +56,13 @@ spec:
 
 .Verification steps
 
-* Create and start a new workspace. Every container used by the workspace mounts a special volume that contains a file with the self-signed certificate. The repository's `.git/config` file contains information about the Git server host (its URL) and the path to the certificate in the `http` section (see Git documentation about link:https://git-scm.com/docs/git-config#Documentation/git-config.txt-httpsslCAInfo[git-config]).
+* Create and start a new workspace. Every container used by the workspace mounts a special volume that contains a file with the self-signed certificate. The container's `/etc/gitconfig` file contains information about the Git server host (its URL) and the path to the certificate in the `http` section (see Git documentation about link:https://git-scm.com/docs/git-config#Documentation/git-config.txt-httpsslCAInfo[git-config]).
 +
-.A `.git/config` file example
+.A `/etc/gitconfig` file example
 ====
 ----
 [http "https://10.33.177.118:3000"]
-sslCAInfo = /etc/che/git/cert/ca.crt
+sslCAInfo = /etc/config/che-git-tls-creds/certificate
 ----
 ====
 
