fix: typos and AsciiDoc syntax fix

--- a/modules/administration-guide/examples/snip_che-note-uninstalling-in-minikube-cluster.adoc
+++ b/modules/administration-guide/examples/snip_che-note-uninstalling-in-minikube-cluster.adoc
@@ -1,6 +1,6 @@
-. When uninstalling {prod-short} from a Minikube cluster, remove the `dex` and __<{prod-namespace}>__ {orch-namespace}.
+. When uninstalling {prod-short} from a Minikube cluster, remove the `dex` and `{prod-namespace}` {orch-namespace}.
 +
 [subs="+attributes,quotes"]
 ----
-$ {orch-cli} delete namespaces dex __<{prod-namespace}>__
+$ {orch-cli} delete namespaces dex {prod-namespace}
 ----
