--- a/modules/administration-guide/pages/limiting-the-number-of-workspaces-that-a-user-can-keep.adoc
+++ b/modules/administration-guide/pages/limiting-the-number-of-workspaces-that-a-user-can-keep.adoc
@@ -23,19 +23,24 @@ spec:
 
 .Procedure
 
-. Get the name of the {prod-short} namespace:
+. Get the name of the {prod-short} namespace. The default is `{prod-namespace}`.
 +
 [source,terminal,subs="+quotes,attributes"]
 ----
 $ {orch-cli} get checluster --all-namespaces \
   -o=jsonpath="{.items[*].metadata.namespace}"
 ----
-+
-include::example$snip_{project-context}-default-namespace.adoc[]
 
 . Configure the `CHE_LIMITS_USER_WORKSPACES_COUNT`:
 +
-include::example$snip_{project-context}-limiting-the-number-of-workspaces-that-a-user-can-keep.adoc[]
+[source,subs="+quotes,attributes"]
+----
+$ {orch-cli} patch checluster/{context} -n {prod-namespace} \ <1>
+--type='merge' -p \
+'{"spec":{"components":{"cheServer":{"extraProperties":{"CHE_LIMITS_USER_WORKSPACES_COUNT": "__<kept_workspaces_limit>__"}}}}}' <2>
+----
+<1> The {prod-short} namespace that you got in step 1.
+<2> Your choice of the `__<kept_workspaces_limit>__` value.
 
 .Additional resources
 
