--- a/modules/administration-guide/pages/creating-a-telemetry-plugin.adoc
+++ b/modules/administration-guide/pages/creating-a-telemetry-plugin.adoc
@@ -333,7 +333,7 @@ include::example$creating-a-telemetry-plug-in/plugin.yaml[]
 
 Typically, the user deploys this file to a corporate web server. This guide demonstrates how to create an Apache web server on OpenShift and host the plug-in there.
 
-Create a config map referencing the new `plugin.yaml` file.
+Create a ConfigMap referencing the new `plugin.yaml` file.
 
 [subs="+attributes"]
 ----
