--- a/modules/administration-guide/pages/creating-a-telemetry-plugin.adoc
+++ b/modules/administration-guide/pages/creating-a-telemetry-plugin.adoc
@@ -340,7 +340,7 @@ Create a ConfigMap referencing the new `plugin.yaml` file.
 $ oc create configmap --from-file=plugin.yaml -n {prod-namespace} telemetry-plugin-yaml
 ----
 
-Create a deployment, a service, and a route to expose the web server. The deployment references this config map and places it in the `/var/www/html` directory.
+Create a deployment, a service, and a route to expose the web server. The deployment references this ConfigMap and places it in the `/var/www/html` directory.
 
 .`manifest.yaml`
 ====
