Move cross-links to additional resources section
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/modules/administration-guide/pages/deploying-che-with-support-for-git-repositories-with-self-signed-certificates.adoc
+++ b/modules/administration-guide/pages/deploying-che-with-support-for-git-repositories-with-self-signed-certificates.adoc
@@ -9,8 +9,6 @@
 
 You can configure {prod-short} to support operations on Git providers that use self-signed certificates.
 
-See also: xref:importing-untrusted-tls-certificates.adoc[].
-
 .Prerequisites
 
 * An active `oc` session with administrative permissions to the OpenShift cluster. See link:https://docs.openshift.com/container-platform/{ocp4-ver}/cli_reference/openshift_cli/getting-started-cli.html[Getting started with the OpenShift CLI].
@@ -71,3 +69,5 @@ sslCAInfo = /etc/config/che-git-tls-creds/certificate
 * xref:using-chectl-to-configure-the-checluster-custom-resource-during-installation.adoc[]
 
 * xref:using-the-cli-to-configure-the-checluster-custom-resource.adoc[]
+
+* xref:importing-untrusted-tls-certificates.adoc[].
