--- a/modules/administration-guide/pages/importing-untrusted-tls-certificates.adoc
+++ b/modules/administration-guide/pages/importing-untrusted-tls-certificates.adoc
@@ -31,8 +31,6 @@ If the cluster is configured with an intermediate certificate, add the whole cha
 
 Certificate files are typically stored as Base64 files, with extensions such as `.pem`, `.crt`, `.ca-bundle`, and others. All Secrets that hold certificate files should use the Base64-encoded certificate rather than binary-encoded certificate. The following procedure is applicable for already installed and running instances and for instances that are to be installed.
 
-See also: xref:deploying-che-with-support-for-git-repositories-with-self-signed-certificates.adoc[].
-
 .Prerequisites
 
 * An active `{orch-cli}` session with administrative permissions to the destination {orch-name} cluster. See {orch-cli-link}.
@@ -202,3 +200,7 @@ $ {orch-cli} exec __<workspace pod name>__ -c __<theia ide container name>__ -n 
 ca-bundle.crt
 source-config-map-name.data-key.crt
 ----
+
+.Additional resources
+
+* xref:deploying-che-with-support-for-git-repositories-with-self-signed-certificates.adoc[].
