--- a/modules/administration-guide/pages/uninstalling-che.adoc
+++ b/modules/administration-guide/pages/uninstalling-che.adoc
@@ -33,7 +33,7 @@ $ {orch-cli} get checluster --all-namespaces \
 +
 [subs="+attributes,quotes"]
 ----
-$ {prod-cli} server:delete -n {prod-namespace} <1>
+$ {prod-cli} server:delete -n {prod-namespace} # <1>
 ----
 <1> The {orch-namespace} that you got in step 1.
 
