--- a/modules/administration-guide/pages/enabling-users-to-run-multiple-workspaces-simultaneously.adoc
+++ b/modules/administration-guide/pages/enabling-users-to-run-multiple-workspaces-simultaneously.adoc
@@ -36,7 +36,7 @@ $ {orch-cli} get checluster --all-namespaces \
 +
 [source,subs="+quotes,attributes"]
 ----
-$ {orch-cli} patch checluster/{context} -n {prod-namespace} \ <1>
+$ {orch-cli} patch checluster/{context} -n {prod-namespace} \ # <1>
 --type='merge' -p \
 '{"spec":{"components":{"devWorkspace":{"runningLimit": "__<running_workspaces_limit>__"}}}}' <2>
 ----
